@@ -1,32 +1,31 @@
 package com.duckblade.osrs.dpscalc.calc3.meta;
 
-import com.duckblade.osrs.dpscalc.calc3.core.Dpt;
-import com.duckblade.osrs.dpscalc.calc3.dist.BaseHitDistribution;
-import com.duckblade.osrs.dpscalc.calc3.dist.LinearDistribution;
-import com.duckblade.osrs.dpscalc.calc3.dist.ScytheDistribution;
-import com.duckblade.osrs.dpscalc.calc3.dist.transformers.TransformedHitDistribution;
-import com.duckblade.osrs.dpscalc.calc3.dist.transformers.VerzikP1HitLimiter;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.BerserkerNecklace;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.BlackMask;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.ColossalBlade;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.DragonHunter;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.GearBonusOperation;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.Golembane;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.Inquisitors;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.Keris;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.LeafBladedBattleAxe;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.MeleeDemonbane;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.ObsidianArmor;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.RevenantWeapons;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.SalveAmulet;
-import com.duckblade.osrs.dpscalc.calc3.gearbonus.VampyreBane;
-import com.duckblade.osrs.dpscalc.calc3.maxhit.MeleeMaxHit;
+import com.duckblade.osrs.dpscalc.calc3.core.Accuracy;
+import com.duckblade.osrs.dpscalc.calc3.core.DefenceRoll;
+import com.duckblade.osrs.dpscalc.calc3.core.HitDistributions;
+import com.duckblade.osrs.dpscalc.calc3.core.MaxHit;
+import com.duckblade.osrs.dpscalc.calc3.core.standard.SpellbookMaxHit;
+import com.duckblade.osrs.dpscalc.calc3.dist.ScytheDist;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.BerserkerNecklace;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.BlackMask;
+import com.duckblade.osrs.dpscalc.calc3.effects.maxhit.ColossalBlade;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.DragonHunter;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.GearBonusOperation;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.Golembane;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.Inquisitors;
+import com.duckblade.osrs.dpscalc.calc3.effects.hitdist.KerisHitDist;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.LeafBladedBattleAxe;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.MeleeDemonbane;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.ObsidianArmor;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.RevenantWeapons;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.SalveAmulet;
+import com.duckblade.osrs.dpscalc.calc3.effects.gearbonus.VampyreBane;
+import com.duckblade.osrs.dpscalc.calc3.effects.accuracy.OsmumtensFangAccuracy;
 import com.duckblade.osrs.dpscalc.calc3.meta.context.ContextValue;
 import com.duckblade.osrs.dpscalc.calc3.meta.math.HitDistribution;
 import com.google.common.collect.ImmutableList;
 import com.google.inject.AbstractModule;
 import com.google.inject.Provides;
-import java.util.Arrays;
 import java.util.List;
 import javax.inject.Inject;
 import javax.inject.Named;
@@ -37,11 +36,11 @@ public class DpsComputeModule3 extends AbstractModule
 	@Override
 	protected void configure()
 	{
-		bind(Dpt.class).asEagerSingleton();
+//		bind(Dpt.class).asEagerSingleton();
 	}
 
 	@Provides
-	@Named(MeleeMaxHit.NAME_GEAR_BONUSES)
+	@Named(GearBonusOperation.GEAR_BONUSES)
 	@Inject
 	public List<GearBonusOperation> getMeleeMaxHitBonuses(
 		SalveAmulet salveAmulet,
@@ -56,7 +55,7 @@ public class DpsComputeModule3 extends AbstractModule
 		LeafBladedBattleAxe leafBladedBattleAxe,
 		ColossalBlade colossalBlade,
 		Inquisitors inquisitors,
-		Keris keris
+		KerisHitDist kerisHitDist
 	)
 	{
 		return ImmutableList.of(
@@ -72,33 +71,50 @@ public class DpsComputeModule3 extends AbstractModule
 			leafBladedBattleAxe,
 			colossalBlade,
 			inquisitors,
-			keris
+			kerisHitDist
 		);
 	}
 
 	@Provides
-	@Named(BaseHitDistribution.WEAPON_HIT_DISTRIBUTIONS)
+	@Named(HitDistributions.HIT_DIST_PROVIDERS)
 	@Inject
 	public List<ContextValue<List<HitDistribution>>> getWeaponHitDistributions(
-		ScytheDistribution scytheDistribution,
-		LinearDistribution linearDistribution
+		ScytheDist scytheDist
 	)
 	{
-		return Arrays.asList(
-			scytheDistribution,
-			linearDistribution
+		return List.of(
+			scytheDist
 		);
 	}
 
 	@Provides
-	@Named(TransformedHitDistribution.TRANSFORMERS)
+	@Named(Accuracy.ACCURACY_PROVIDERS)
 	@Inject
-	public List<TransformedHitDistribution.Transformer> getHitDistributionTransformers(
-		VerzikP1HitLimiter verzikP1HitLimiter
+	public List<ContextValue<Double>> getAccuracyProviders(
+		OsmumtensFangAccuracy osmumtensFangAccuracy
 	)
 	{
-		return Arrays.asList(
-			verzikP1HitLimiter
+		return List.of(osmumtensFangAccuracy);
+	}
+
+	@Provides
+	@Named(DefenceRoll.DEFENCE_ROLL_PROVIDERS)
+	@Inject
+	public List<ContextValue<Integer>> getDefenceRollProviders(
+	)
+	{
+		return List.of();
+	}
+
+	@Provides
+	@Named(MaxHit.MAX_HIT_PROVIDERS)
+	@Inject
+	public List<ContextValue<Integer>> getMaxHitProviders(
+		SpellbookMaxHit spellbookMaxHit
+	)
+	{
+		return List.of(
+			spellbookMaxHit
 		);
 	}
 
